# embassy_lin_eval

./: .pre-commit-config.yaml  Cargo.toml  Embed.toml  README.md  commander.py  lin_eval.ldf  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yml
hw/: LIN_eval.kicad_pcb  LIN_eval.kicad_pro  LIN_eval.kicad_sch  led.kicad_sch
hw/gerber/: LIN_eval-B_Cu.gbl  LIN_eval-B_Mask.gbs  LIN_eval-B_Paste.gbp  LIN_eval-B_Silkscreen.gbo  LIN_eval-Edge_Cuts.gm1  LIN_eval-F_Cu.gtl  LIN_eval-F_Mask.gts  LIN_eval-F_Paste.gtp  LIN_eval-F_Silkscreen.gto  LIN_eval-NPTH-drl_map.gbr  LIN_eval-NPTH.drl  LIN_eval-PTH-drl_map.gbr  LIN_eval-PTH.drl
src/: ds18b20.rs  lin_slave.rs  lin_slave_driver.rs  lin_slave_handler.rs  main.rs  onewire.rs  rgb.rs  signals.rs
