[package]
edition = "2021"
name = "lin_eval"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32g030k8", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

[[bin]]
name = "lin_eval"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "c9358e1f1e5d88aa0ad998c44eb2da6be73cf477" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "c9358e1f1e5d88aa0ad998c44eb2da6be73cf477" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "c9358e1f1e5d88aa0ad998c44eb2da6be73cf477" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "c9358e1f1e5d88aa0ad998c44eb2da6be73cf477" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "c9358e1f1e5d88aa0ad998c44eb2da6be73cf477" }
