[project]
name = "lin-eval-commander"
version = "0.0.1"
description = ""
authors = [{ name = "Daniel Trnka", email = "daniel.trnka@gmail.com" }]
requires-python = "~=3.8"
dependencies = [
    "plin-linux>=0.0.3,<0.0.4",
    "ldfparser>=0.25.0,<0.26",
    "cmd2>=2.5.6,<3",
    "gnureadline>=8.2.13",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
